--- a/src/main/resources/templates/admin/gallery.html
+++ b/src/main/resources/templates/admin/gallery.html
@@ -48,11 +48,7 @@
         <div th:replace="comm/macros :: pageAdminNav(${gallery})"></div>
     </div>
 
-    <footer class="admin-content-footer">
-        <hr>
-        <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
-    </footer>
-
+    <div th:replace="comm/footer::htmlfooter"></div>
 </div>
 <script>
     var chou = new chou();
