--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -113,14 +113,10 @@
 
         <div class="am-margin">
             <button type="button" id="save-article" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
-            <button type="button" class="am-btn am-btn-primary am-btn-xs">放弃保存</button>
         </div>
     </div>
 
-    <footer class="admin-content-footer">
-        <hr>
-        <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
-    </footer>
+    <div th:replace="comm/footer::htmlfooter"></div>
 </div>
 <script th:src="@{/js/article.js}"></script>
 <!-- content end -->
