--- a/src/main/resources/templates/admin/plan_list.html
+++ b/src/main/resources/templates/admin/plan_list.html
@@ -80,11 +80,7 @@
         </div>
     </div>
 
-    <footer class="admin-content-footer">
-        <hr>
-        <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
-    </footer>
-
+    <div th:replace="comm/footer::htmlfooter"></div>
 </div>
 <div class="am-popup" id="addPlan">
     <div class="am-popup-inner">
