--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -61,8 +61,8 @@
     <div class="admin-content-body">
         <div class="am-cf am-padding am-padding-bottom-0">
             <div class="am-fl am-cf">
-                <strong class="am-text-primary am-text-lg">表单</strong> /
-                <small>form</small>
+                <strong class="am-text-primary am-text-lg">文章</strong> /
+                <small>article</small>
             </div>
         </div>
 
