--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -9,8 +9,8 @@
 <div class="admin-content">
     <div class="admin-content-body">
         <div class="am-cf am-padding am-padding-bottom-0">
-            <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">表格</strong> /
-                <small>Table</small>
+            <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">文章列表</strong> /
+                <small>article</small>
             </div>
         </div>
         <hr>
