--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -5,108 +5,103 @@
     <title>user</title>
 </head>
 <body>
-<!-- content start -->
-<div class="admin-content">
-    <div class="admin-content-body">
-        <div class="am-cf am-padding am-padding-bottom-0">
-            <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">个人资料</strong> /
-                <small>Personal information</small>
+<script th:src="@{/assets/js/theme.js}"></script>
+<div class="tpl-content-wrapper">
+    <div class="container-fluid am-cf">
+        <div class="row">
+            <div class="am-u-sm-12 am-u-md-12 am-u-lg-9">
+                <div class="page-header-heading"><span class="am-icon-home page-header-heading-icon"></span> 个人资料
+                    <small>Personal Information</small>
+                </div>
+                <p class="page-header-description">对酒当歌，人生几何</p>
             </div>
         </div>
 
-        <hr/>
+    </div>
 
-        <div class="am-g">
-            <div class="am-u-sm-12 am-u-md-4 am-u-md-push-8">
-                <div class="am-panel am-panel-default">
-                    <div class="am-panel-bd">
-                        <div class="am-g">
-                            <div class="am-u-md-4">
-                                <img class="am-img-radius am-img-thumbnail"
-                                     th:src="@{${src!=null}?${src}:'/imgs/akari.jpg'}"
-                                     alt="" id="imgHead"/>
-                            </div>
-                            <div class="am-u-md-8">
-                                <p>你可以使用本地上传头像。 </p>
-                                <form class="am-form" id="fileForm">
-                                    <div class="am-form-group">
-                                        <div class="am-form-group am-form-file">
-                                            <button type="button" class="am-btn am-btn-default  am-btn-sm">
-                                                <i class="am-icon-cloud-upload"></i> 选择要上传的文件</button>
-                                            <input id="user-pic" type="file" name="file">
-                                        </div>
-                                        <div id="file-list"></div>
-                                        <button type="button" class="am-btn am-btn-primary am-btn-xs" onclick="savePhoto()">保存</button>
-                                    </div>
-                                </form>
-                            </div>
+    <div class="row-content am-cf">
+        <div class="row">
+
+            <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
+                <div class="widget am-cf">
+                    <div class="widget-head am-cf">
+                        <div class="widget-title am-fl">线条表单</div>
+                        <div class="widget-function am-fr">
+                            <a href="javascript:;" class="am-icon-cog"></a>
                         </div>
+                    </div>
+                    <div class="widget-body am-fr">
+
+                        <form class="am-form tpl-form-line-form" id="userForm">
+                            <input type="hidden" id="user-id" name="id" />
+                            <div class="am-form-group">
+                                <label for="user-name" class="am-u-sm-3 am-form-label">姓名<span
+                                        class="tpl-form-line-small-title">Name</span></label>
+                                <div class="am-u-sm-9">
+                                    <input type="text" class="tpl-form-input" id="user-name" placeholder="姓名 / Name"
+                                           name="fullname">
+                                    <small>输入你的名字，让我们记住你。</small>
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <label for="user-name" class="am-u-sm-3 am-form-label">电子邮件<span
+                                        class="tpl-form-line-small-title">Email</span></label>
+                                <div class="am-u-sm-9">
+                                    <input type="text" class="tpl-form-input" id="user-email"
+                                           placeholder="输入你的电子邮件 / Email" name="email">
+                                    <small>邮箱你懂得...</small>
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <label for="user-phone" class="am-u-sm-3 am-form-label">电话<span
+                                        class="tpl-form-line-small-title">Telephone</span></label>
+                                <div class="am-u-sm-9">
+                                    <input type="tel" class="tpl-form-input" id="user-phone"
+                                           placeholder="输入你的电话号码 / Telephone" name="phone">
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <label for="user-QQ" class="am-u-sm-3 am-form-label">QQ</label>
+                                <div class="am-u-sm-9">
+                                    <input type="number" pattern="[0-9]*" id="user-QQ" placeholder="输入你的QQ号码" name="qq">
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <label for="user-weibo" class="am-u-sm-3 am-form-label">微博<span
+                                        class="tpl-form-line-small-title">Twitter</span></label>
+                                <div class="am-u-sm-9">
+                                    <input type="text" id="user-weibo" placeholder="输入你的微博 / Twitter" name="weibo">
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <label for="user-intro" class="am-u-sm-3 am-form-label">简介<span
+                                        class="tpl-form-line-small-title">Intro</span></label>
+                                <div class="am-u-sm-9">
+                                    <textarea class="" rows="5" id="user-intro" placeholder="输入个人简介"
+                                              name="intro"></textarea>
+                                    <small>250字以内写出你的一生...</small>
+                                </div>
+                            </div>
+
+                            <div class="am-form-group">
+                                <div class="am-u-sm-9 am-u-sm-push-3">
+                                    <button type="button" onclick="saveInfo()" class="am-btn am-btn-primary tpl-btn-bg-color-success ">提交
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="am-u-sm-12 am-u-md-8 am-u-md-pull-4">
-                <form class="am-form am-form-horizontal" id="userForm">
-                    <input type="hidden" id="user-id" name="id" />
-                    <div class="am-form-group">
-                        <label for="user-name" class="am-u-sm-3 am-form-label">姓名 / Name</label>
-                        <div class="am-u-sm-9">
-                            <input type="text" id="user-name" placeholder="姓名 / Name" name="fullname">
-                            <small>输入你的名字，让我们记住你。</small>
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="user-email" class="am-u-sm-3 am-form-label">电子邮件 / Email</label>
-                        <div class="am-u-sm-9">
-                            <input type="email" id="user-email" placeholder="输入你的电子邮件 / Email" name="email">
-                            <small>邮箱你懂得...</small>
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="user-phone" class="am-u-sm-3 am-form-label">电话 / Telephone</label>
-                        <div class="am-u-sm-9">
-                            <input type="tel" id="user-phone" placeholder="输入你的电话号码 / Telephone" name="phone">
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="user-QQ" class="am-u-sm-3 am-form-label">QQ</label>
-                        <div class="am-u-sm-9">
-                            <input type="number" pattern="[0-9]*" id="user-QQ" placeholder="输入你的QQ号码" name="qq">
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="user-weibo" class="am-u-sm-3 am-form-label">微博 / Twitter</label>
-                        <div class="am-u-sm-9">
-                            <input type="text" id="user-weibo" placeholder="输入你的微博 / Twitter" name="weibo">
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="user-intro" class="am-u-sm-3 am-form-label">简介 / Intro</label>
-                        <div class="am-u-sm-9">
-                            <textarea class="" rows="5" id="user-intro" placeholder="输入个人简介" name="intro"></textarea>
-                            <small>250字以内写出你的一生...</small>
-                        </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <div class="am-u-sm-9 am-u-sm-push-3">
-                            <button type="button" onclick="saveInfo()" class="am-btn am-btn-primary">保存修改</button>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
-
-    <div th:replace="comm/footer::htmlfooter"></div>
+    <!--<div th:replace="comm/footer::htmlfooter"></div>-->
 </div>
-<!-- content end -->
-<script th:src="@{/js/user.js}" ></script>
+<script th:src="@{/js/user.js}"></script>
 </body>
 </html>
