--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="htmlhead">
-    <link rel="stylesheet" th:href="@{/assets/css/amazeui.min.css}" />
-    <link rel="stylesheet" th:href="@{/assets/css/admin.css}">
-    <!--[if lt IE 9]>
-    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-    <script src="assets/js/amazeui.ie8polyfill.min.js"></script>
-    <![endif]-->
-
-    <!--[if (gte IE 9)|!(IE)]><!-->
-    <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
-    <!--<![endif]-->
-    <script th:src="@{/assets/js/amazeui.min.js}"></script>
-    <script th:src="@{/assets/js/app.js}"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="index">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <link rel="icon" type="image/png" th:href="@{assets/i/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" th:href="@{assets/i/app-icon72x72@2x.png}">
+    <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
+    <link rel="stylesheet" th:href="@{/assets/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/amazeui.datatables.min.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/app.css}">
+    <script th:src="@{/assets/js/jquery.min.js}"></script>
     <script th:src="@{/js/base.js}"></script>
     <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
     <script th:src="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.js}"></script>
+    <script th:src="@{/assets/js/amazeui.min.js}"></script>
+    <script th:src="@{/assets/js/amazeui.datatables.min.js}"></script>
+    <script th:src="@{/assets/js/dataTables.responsive.min.js}"></script>
+    <script th:src="@{/assets/js/app.js}"></script>
     <style>
         .swal2-container{
             z-index: 9999 !important;
