--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -212,24 +212,24 @@
             </li>
             <li class="sidebar-nav-link">
                 <a name="/admin/user" class="iframeurl">
-                    <i class="am-icon-table sidebar-nav-link-logo"></i> 个人资料
+                    <i class="am-icon-book sidebar-nav-link-logo"></i> 个人资料
                 </a>
             </li>
             <li class="sidebar-nav-link">
-                <a href="calendar.html">
-                    <i class="am-icon-calendar sidebar-nav-link-logo"></i> 日历
-                </a>
-            </li>
-            <li class="sidebar-nav-link">
-                <a href="form.html">
-                    <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 表单
+                <a name="/admin/article/edit" class="iframeurl">
+                    <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 发布文章
 
                 </a>
             </li>
             <li class="sidebar-nav-link">
-                <a href="chart.html">
-                    <i class="am-icon-bar-chart sidebar-nav-link-logo"></i> 图表
+                <a name="/admin/gallery/index" class="iframeurl">
+                    <i class="am-icon-image sidebar-nav-link-logo"></i> 相册
 
+                </a>
+            </li>
+            <li class="sidebar-nav-link">
+                <a name="/admin/category/list" class="iframeurl">
+                    <i class="am-icon-tags sidebar-nav-link-logo"></i> 分类
                 </a>
             </li>
 
