--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -56,67 +56,78 @@
     }
 </style>
 <body>
-<!-- content start -->
-<div class="admin-content">
-    <div class="admin-content-body">
-        <div class="am-cf am-padding am-padding-bottom-0">
-            <div class="am-fl am-cf">
-                <strong class="am-text-primary am-text-lg">文章</strong> /
-                <small>article</small>
+<script th:src="@{/assets/js/theme.js}"></script>
+<div class="tpl-content-wrapper">
+    <div class="container-fluid am-cf">
+        <div class="row">
+            <div class="am-u-sm-12 am-u-md-12 am-u-lg-9">
+                <div class="page-header-heading"><span class="am-icon-home page-header-heading-icon"></span> 发布文章
+                    <small>/Article</small>
+                </div>
+                <p class="page-header-description"></p>
             </div>
         </div>
 
-        <hr>
-
-        <div class="am-tabs am-margin">
-            <div class="am-tab-panel am-fade am-in am-active" id="tab1">
-                <form class="am-form" id="articleForm">
-                    <input type="hidden" id="id" name="id" th:value="${article!=null and article.id!=null} ? ${article.id} : ''">
-                    <input type="hidden" id="content" name="content">
-                    <input type="hidden" id="categoryIds" name="categoryIds">
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                            文章标题
-                        </div>
-                        <div class="am-u-sm-8 am-u-md-4">
-                            <input type="text" class="am-input-sm" id="title" name="title"
-                                   th:value="${article!=null and article.title!=null} ? ${article.title} : ''">
-                        </div>
-                        <div class="am-hide-sm-only am-u-md-6"></div>
-                    </div>
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-12 am-u-md-2 am-text-right admin-form-text">
-                            内容描述
-                        </div>
-                        <div class="am-u-sm-12 am-u-md-10" id="editor">
-                            <p th:text="${article!=null and article.content!=null} ? ${article.content} : ''"></p>
+    </div>
+    <div class="row-content am-cf">
+        <div class="row">
+            <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
+                <div class="widget am-cf">
+                    <div class="widget-head am-cf">
+                        <div class="widget-title am-fl">文章</div>
+                        <div class="widget-function am-fr">
+                            <a href="javascript:;" class="am-icon-cog"></a>
                         </div>
                     </div>
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                            分类
-                        </div>
-                        <div class="am-u-sm-8 am-u-md-4">
-                            <select multiple data-am-selected id="select-category">
-                                <th:block th:each="c : ${categories}">
-                                    <option th:value="${c.id}" th:text="${c.name}"
-                                            th:selected="${article!=null and common.exists_cate(article.categories, c.name)}?true:false">
-                                    </option>
-                                </th:block>
-                            </select>
-                        </div>
-                        <div class="am-u-sm-12 am-u-md-6"></div>
+                    <div class="widget-body am-fr">
+                        <form class="am-form tpl-form-line-form" id="articleForm">
+                            <input type="hidden" id="id" name="id"
+                                   th:value="${article!=null and article.id!=null} ? ${article.id} : ''">
+                            <input type="hidden" id="content" name="content">
+                            <input type="hidden" id="categoryIds" name="categoryIds">
+                            <div class="am-form-group">
+                                <label for="title" class="am-u-sm-3 am-form-label">标题<span
+                                        class="tpl-form-line-small-title">Title</span></label>
+                                <div class="am-u-sm-9">
+                                    <input type="text" class="tpl-form-input" id="title" name="title"
+                                           th:value="${article!=null and article.title!=null} ? ${article.title} : ''">
+                                    <small>输入Title</small>
+                                </div>
+                                <div class="am-hide-sm-only am-u-md-6"></div>
+                            </div>
+                            <div class="am-form-group">
+                                <label for="title" class="am-u-sm-3 am-form-label">内容<span
+                                        class="tpl-form-line-small-title">Content</span></label>
+                                <div class="am-u-sm-9" id="editor">
+                                    <p th:text="${article!=null and article.content!=null} ? ${article.content} : ''"></p>
+                                </div>
+                            </div>
+                            <div class="am-form-group">
+                                <label for="title" class="am-u-sm-3 am-form-label">分类<span
+                                        class="tpl-form-line-small-title">Content</span></label>
+                                <div class="am-u-sm-9">
+                                    <select multiple data-am-selected id="select-category">
+                                        <th:block th:each="c : ${categories}">
+                                            <option th:value="${c.id}" th:text="${c.name}"
+                                                    th:selected="${article!=null and common.exists_cate(article.categories, c.name)}?true:false">
+                                            </option>
+                                        </th:block>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="am-form-group">
+                                <div class="am-u-sm-9 am-u-sm-push-3">
+                                    <button type="button" id="save-article"
+                                            class="am-btn am-btn-primary tpl-btn-bg-color-success ">提交保存
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
-        </div>
-
-        <div class="am-margin">
-            <button type="button" id="save-article" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
         </div>
     </div>
-
-    <div th:replace="comm/footer::htmlfooter"></div>
 </div>
 <script th:src="@{/js/article.js}"></script>
 <!-- content end -->
