--- a/src/main/resources/templates/admin/gallery.html
+++ b/src/main/resources/templates/admin/gallery.html
@@ -5,51 +5,61 @@
     <title>gallery</title>
 </head>
 <body>
-<!-- content start -->
-<div class="admin-content">
+<script th:src="@{/assets/js/theme.js}"></script>
+<div class="tpl-content-wrapper">
+    <div class="row-content am-cf">
+        <div class="row">
+            <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
+                <div class="widget am-cf">
+                    <div class="widget-head am-cf">
+                        <div class="widget-title  am-cf">相册</div>
 
-    <div class="admin-content-body">
-        <div class="am-cf am-padding am-padding-bottom-0">
-            <div class="am-fl am-cf">
-                <strong class="am-text-primary am-text-lg">相册</strong> /
-                <small>Gallery</small>
-            </div>
-        </div>
 
-        <hr>
+                    </div>
 
-        <div class="am-g">
-            <div class="am-u-sm-12 am-u-md-6">
-                <div class="am-form-group am-form-file">
-                    <button type="button" class="am-btn am-btn-danger am-btn-sm">
-                        <i class="am-icon-cloud-upload"></i> 选择要上传的文件
-                    </button>
-                    <form id="fileForm">
-                        <input id="doc-form-file" type="file" name="file" multiple>
-                    </form>
+                    <div class="widget-body  am-fr">
+                        <div class="am-u-sm-12 am-u-md-6 am-u-lg-6">
+                            <div class="am-form-group">
+                                <div class="am-btn-toolbar">
+                                    <div class="am-form-group am-form-file">
+                                        <button type="button" class="am-btn am-btn-danger am-btn-sm">
+                                            <i class="am-icon-cloud-upload"></i> 选择要上传的文件
+                                        </button>
+                                        <form id="fileForm">
+                                            <input id="doc-form-file" type="file" name="file" multiple>
+                                        </form>
+                                    </div>
+                                    <div id="file-list"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <ul class="am-avg-sm-2 am-avg-md-4 am-avg-lg-6 am-margin gallery-list">
+                            <th:block th:each="g:${gallery.list}">
+                                <li>
+                                    <a href="#">
+                                        <img class="am-img-radius am-img-thumbnail"
+                                             th:src="${g.photo}" style="max-width: 200px;height: auto;"/>
+                                        <div class="gallery-desc"
+                                             th:text="${dateUtil.dateFormat(g.addTime, 'yyyy-MM-dd HH:mm')}"></div>
+                                    </a>
+                                    <button class="am-btn am-btn-warning am-btn-xs"
+                                            th:onclick="'delGallery('+${g.id}+')'">删除
+                                    </button>
+                                </li>
+                            </th:block>
+                        </ul>
+                        <div th:replace="comm/macros :: pageAdminNav(${gallery})"></div>
+                    </div>
                 </div>
-                <div id="file-list"></div>
             </div>
         </div>
-
-        <ul class="am-avg-sm-2 am-avg-md-4 am-avg-lg-6 am-margin gallery-list">
-            <th:block th:each="g:${gallery.list}">
-                <li>
-                    <a href="#">
-                        <img class="am-img-radius am-img-thumbnail"
-                             th:src="${g.photo}" style="max-width: 200px;height: auto;" />
-                        <div class="gallery-desc" th:text="${dateUtil.dateFormat(g.addTime, 'yyyy-MM-dd HH:mm')}"></div>
-                    </a>
-                    <button class="am-btn am-btn-warning am-btn-xs" th:onclick="'delGallery('+${g.id}+')'">删除</button>
-                </li>
-            </th:block>
-        </ul>
-
-        <div th:replace="comm/macros :: pageAdminNav(${gallery})"></div>
     </div>
-
-    <div th:replace="comm/footer::htmlfooter"></div>
 </div>
+<script th:src="@{/assets/js/amazeui.min.js}"></script>
+<script th:src="@{/assets/js/amazeui.datatables.min.js}"></script>
+<script th:src="@{/assets/js/dataTables.responsive.min.js}"></script>
+<script th:src="@{/assets/js/app.js}"></script>
 <script>
     var chou = new chou();
     $(function () {
