--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="am-u-sm-12 am-u-md-12 am-u-lg-9">
                 <div class="page-header-heading"><span class="am-icon-home page-header-heading-icon"></span> 个人资料
-                    <small>Personal Information</small>
+                    <small>/Personal Information</small>
                 </div>
                 <p class="page-header-description">对酒当歌，人生几何</p>
             </div>
@@ -100,7 +100,6 @@
             </div>
         </div>
     </div>
-    <!--<div th:replace="comm/footer::htmlfooter"></div>-->
 </div>
 <script th:src="@{/js/user.js}"></script>
 </body>
