--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Login Page | Amaze UI Example</title>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Amaze UI Admin index Examples</title>
+    <meta name="description" content="这是一个 index 页面">
+    <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="alternate icon" type="image/png" th:href="@{assets/i/favicon.png}"/>
-    <link rel="stylesheet" th:href="@{/assets/css/amazeui.min.css}"/>
-    <link rel="stylesheet" th:href="@{/assets/css/admin.css}">
-    <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
-    <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
-    <script th:src="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.js}"></script>
-    <script th:src="@{/js/base.js}"></script>
-    <style>
-        .header {
-            text-align: center;
-        }
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="icon" type="image/png" href="assets/i/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/i/app-icon72x72@2x.png">
+    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.min.css}" />
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.datatables.min.css}" />
+    <link rel="stylesheet" th:href="@{assets/css/app.css}">
+    <script th:src="@{assets/js/jquery.min.js}"></script>
 
-        .header h1 {
-            font-size: 200%;
-            color: #333;
-            margin-top: 30px;
-        }
-
-        .header p {
-            font-size: 14px;
-        }
-    </style>
 </head>
-<body>
-<div class="header">
-    <div class="am-g">
-        <h1>Web ide</h1>
-        <p>Integrated Development Environment<br/>代码编辑，代码生成，界面设计，调试，编译</p>
-    </div>
-    <hr/>
-</div>
-<div class="am-g">
-    <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
-        <h3>登录</h3>
-        <hr>
-        <div class="am-btn-group">
-            <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
-            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i>
-                Google+</a>
-            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i>
-                stackOverflow</a>
-        </div>
-        <br>
-        <br>
 
-        <form id="loginForm" class="am-form">
-            <label for="username">用户名:</label>
-            <input type="text" name="username" id="username" value="">
-            <br>
-            <label for="password">密码:</label>
-            <input type="password" name="password" id="password" value="">
-            <br>
-            <label for="remember-me">
-                <input id="remember-me" type="checkbox" name="remeber_me">
-                记住密码
-            </label>
-            <br/>
-            <div class="am-cf">
-                <input type="button" onclick="login()" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">
-                <input type="button" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr">
+<body data-type="login">
+<script src="assets/js/theme.js"></script>
+<div class="am-g tpl-g">
+    <!-- 风格切换 -->
+    <div class="tpl-skiner">
+        <div class="tpl-skiner-toggle am-icon-cog">
+        </div>
+        <div class="tpl-skiner-content">
+            <div class="tpl-skiner-content-title">
+                选择主题
             </div>
-        </form>
-        <hr>
-        <p>© 2018 JoJo's Bizarre Adventure.</p>
+            <div class="tpl-skiner-content-bar">
+                <span class="skiner-color skiner-white" data-color="theme-white"></span>
+                <span class="skiner-color skiner-black" data-color="theme-black"></span>
+            </div>
+        </div>
+    </div>
+    <div class="tpl-login">
+        <div class="tpl-login-content">
+            <div class="tpl-login-logo">
+
+            </div>
+
+
+
+            <form class="am-form tpl-form-line-form" id="loginForm">
+                <div class="am-form-group">
+                    <input type="text" class="tpl-form-input" id="user-name" name="username" placeholder="请输入账号">
+
+                </div>
+
+                <div class="am-form-group">
+                    <input type="password" class="tpl-form-input" id="user-password" name="password" placeholder="请输入密码">
+
+                </div>
+                <div class="am-form-group tpl-login-remember-me">
+                    <input id="remember-me" type="checkbox" name="remeber_me">
+                    <label for="remember-me">
+
+                        记住密码
+                    </label>
+
+                </div>
+
+                <div class="am-form-group">
+
+                    <button type="button" onclick="login()" class="am-btn am-btn-primary  am-btn-block tpl-btn-bg-color-success  tpl-login-btn">提交</button>
+
+                </div>
+            </form>
+        </div>
     </div>
 </div>
+<script th:src="@{assets/js/amazeui.min.js}"></script>
+<script th:src="@{assets/js/app.js}"></script>
+<script th:src="@{/js/base.js}"></script>
 <script>
     var chou = new chou();
     $(function () {
